Fixed donnees menu dropdown display on mobile
+ moved search bar to page header
+ fixed margin errors in daily item

--- a/objetslitt/assets/stylesheets/_daily-item.scss
+++ b/objetslitt/assets/stylesheets/_daily-item.scss
@@ -16,6 +16,9 @@
   }
 
   .daily-item-content {
+    h2 {
+        margin-top: 0;
+    }
     .daily-item-title {
       margin-top: 0;
     }
